# notes-taking-app-challenge

./: .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/hooks/: block-env-read.sh  dangerous-bash.sh  frontend-lint.sh  migration-reminder.sh  ruff-fix.sh  secret-guard.sh
.github/workflows/: cd.yml  ci.yml  claude-code-review.yml  claude.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml
backend/apps/authentication/: apps.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py
backend/apps/authentication/tests/: factories.py  test_integration.py  test_repositories.py  test_services.py  test_views.py
backend/apps/core/: apps.py  models.py  urls.py  views.py
backend/apps/core/tests/: test_views.py
backend/apps/notes/: apps.py  filters.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py
backend/apps/notes/tests/: factories.py  test_repositories.py  test_serializers.py  test_services.py  test_views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
deploy/: Caddyfile  setup.sh
docs/: ai-workflow.md  figma-mcp-setup.md  github-mcp-setup.md  requirements.md
docs/assets/: README.md
docs/plans/: 1-project-scaffold.md  11-login-and-register-pages.md  17-notes-main-screen.md  19-note-editor-screen.md  26-move-last-edited-stamp-inside-note-card.md  30-resolve-auth-flow-defects.md  4-backend-initialization.md  5-frontend-initialization.md  (+2 more)
frontend/: .dockerignore  .env.example  .eslintrc.json  CLAUDE.md  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+80 files in other folders)
