[project]
name = "notes-backend"
version = "0.1.0"
description = "Notes-taking app challenge — Django REST backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-filter>=24.0",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.3",
    "psycopg[binary]>=3.1",
    "python-decouple>=3.8",
    "gunicorn>=22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "faker>=25.0",
    "parameterized>=0.9",
    "ruff>=0.4.4",
    "mypy>=1.10,<1.11",
    "django-stubs[compatible-mypy]>=5.0,<5.1",
    "djangorestframework-stubs[compatible-mypy]>=3.15,<3.16",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP8)
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstrings)
    "N",   # pep8-naming
    "C90", # mccabe complexity
]
ignore = [
    "D100", # Missing docstring in public module (optional)
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["D"]               # Relax docstring rules in test files
"*/migrations/*" = ["E", "F", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "--cov=apps --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/settings/*",
    "*/tests/*",
    "manage.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
